@@ -1,6 +1,8 @@
 * Thu Feb 28 2008 Jesse Keating <jkeating@redhat.com>
 - Make sure we get fresh repomd.xml each time we run
 - Don't autoclean the repodata, some of it can be reused
+- Clear out the repodata we copy out temporarily, so that we don't
+  traceback on --force runs.
 
 * Thu Feb 21 2008 Jesse Keating <jkeating@redhat.com>
 - Handle gzipped comps files.
